<resources>
    <string name="app_name" translatable="false">E-Culture Experience</string>
    <string name="email" translatable="false">Email</string>
    <string name="maps_api_key" translatable="false">AIzaSyCaigPsW_Hi2BkKpgeprK-WJ3k_zpoQliA</string>
    <string name="inserisci_il_tuo_indirizzo_e_ti_invieremo_una_email_dove_poter_resettare_la_tua_password">Enter your address and we will send you an email where you can reset your password</string>
    <string name="che_sbadato">Than careless!</string>
    <string name="richiedi_reset">Request reset</string>
    <string name="ma_non_ti_preoccupare_ti_aiutiamo_noi">But don’t worry, we’ll help you!</string>
    <string name="button" translatable="false">button</string>
    <string name="todo" translatable="false">todo</string>
    <string name="button2" translatable="false">button2</string>
    <string name="button3" translatable="false">button3</string>
    <string name="esci">exit</string>
    <string name="password" translatable="false">Password</string>
    <string name="descrizione">Description</string>
    <string name="inserici_password">Enter password</string>
    <string name="percorsi_preferiti">Favourite routes</string>
    <string name="domanda_numero">Question n.</string>
    <string name="title_activity_mostra_luogo_di_interesse2" translatable="false">MostraLuogoDiInteresse2</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="change_password">Change password</string>
    <string name="clicca_sulla_foto_profilo_per_cambiarla">Click here to change profile image</string>
    <string name="favorite">Add to favourites</string>
    <string name="content_description_favorite">You can revisit these places whenever you want</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="home">Explore</string>
    <string name="durata">"Journey time: "</string>
    <string name="minutes">" minutes"</string>
    <string name="le_tue_mete_preferite">Favourite destinations</string>
    <string name="esci_da_questo_account">Log out</string>
    <string name="registrati">Register</string>
    <string name="logIn">Login</string>
    <string name="inserisci_email">INSERT EMAIL</string>
    <string name="ricorda_le_mie_credenziali">remember my credentials</string>
    <string name="haiDimentiCatoLaPassword">forgotten password?</string>
    <string name="nonSeiAncoraRegistrato">Not Registered Yet?</string>
    <string name="cliccaQuiPerFarlo">Click Here To Do</string>
    <string name="attivita">activity</string>
    <string name="miArrendo">surrender</string>
    <string name="haiGiaUnAccount">Do you already have an account?</string>
    <string name="risultatoFinale">Final result</string>
    <string name="riprova">repeat the quiz</string>
    <string name="gioca">Play!</string>
    <string name="tempoScaduto">Time Out!</string>
    <string name="vaiVia">Leave</string>
    <string name="percorsi">Routes</string>
    <string name="avviaPercorso">Start Route</string>
    <string name="descrizioneMetaMatera">It is known worldwide for its historic Sassi districts, making it one of the oldest still-inhabited cities in the world.</string>
    <string name="prova_domanda">test ask</string>
    <string name="punteggio">score</string>
    <string name="timeOut">time out!!</string>
    <string name="turnAround">turn around</string>
    <string name="review">review</string>
    <string name="reviews">reviews</string>
    <string name="voto">Score the course</string>
    <string name="classifica">Ranking</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="language_eng">English</string>
    <string name="language_ita">Italian</string>
    <string name="edit_profile">Edit profile</string>
    <string name="favourite_destination">Favourite destination</string>

    <string name="nickname" translatable="false">Nickname</string>
    <string name="correct_answers">Correct answer</string>
    <string name="result_quiz_activity">Result Quiz</string>
    <string name="share_result">Share result</string>
    <string name="meta_added">Meta added to favorites list</string>
    <string name="meta_removed">Meta removed from favorites list</string>
    <string name="route">Route</string>
    <string name="quiz" translatable="false">Quiz</string>
    <string name="puzzle" translatable="false">Puzzle</string>
    <string name="recover_password">Recover password</string>
    <string name="app_preferences">App preferences</string>
    <string name="import_route">Import route</string>
    <string name="already_registration">Do you already have an account?</string>
    <string name="text_registration">Enter email and password in order to register with E-CultureExperience</string>
    <string name="text_login">Enter email and password to access E-CultureExperience</string>
    <string name="no_account">Don’t you have an account?</string>
    <string name="remember_credentials">Remember my credentials</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_no_credentials">Login without credentials</string>
    <string name="title_qrscanner">Scan QR Code</string>


</resources>