<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp"
            tools:context=".Accesso.LoginActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                style="@style/Widget.App.TextInputLayout"
                android:hint="@string/email"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="@dimen/text_margin"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descrizione">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.App.TextInputLayout"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:hint="Password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/rememberMe"
                style="@style/Widget.App.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_credentials"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                style="@style/Widget.App.Button"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:onClick="loginBtnClick"

                android:text="@string/logIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

            <TextView
                android:id="@+id/titolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/logIn"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descrizione"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="32dp"
                android:gravity="center"
                android:text="@string/text_login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titolo" />

            <LinearLayout
                android:id="@+id/registrationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/guestText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotText">

                <TextView
                    android:id="@+id/registrationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/no_account"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotText" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Theme.ECultureExperience.Button.TextButton"
                    android:id="@+id/registrationBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrati"
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintBottom_toTopOf="@+id/guestText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registrationTextView" />


            </LinearLayout>

            <TextView
                android:id="@+id/forgotText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="forgotTxtClick"
                android:fontFamily="sans-serif-medium"
                android:text="@string/forgot_password"
                android:textColor="@color/gov_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

            <TextView
                android:id="@+id/guestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="guestLogin"
                android:text="@string/login_no_credentials"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>