<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizGame.DashboardActivity"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="0dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.ECultureExperience.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/immagine"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitXY"
                android:contentDescription="cane" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.ECultureExperience.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="600dp"
        android:layout_height="300dp"
        android:rotation="90"
        app:srcCompat="@drawable/rounded_rectangle"
        android:layout_marginTop="0dip"
        android:layout_gravity="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="273dp"
        android:layout_height="33dp"
        android:layout_marginTop="-400dip"
        android:layout_gravity="center"
         />

    <TextView
        android:id="@+id/domanda"
        android:layout_width="251dp"
        android:layout_height="117dp"
        android:gravity="center"
        android:text="@string/prova_domanda"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="160dp"/>

    <Button
        android:id="@+id/primaRisposta"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button_quiz_game"
        android:text="@string/button"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="330dip"
        android:layout_marginHorizontal="80dp"/>
    <Button
        android:id="@+id/secondaRisposta"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button_quiz_game"
        android:text="@string/button"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="420dip"
        android:layout_marginHorizontal="80dp"/>
    <Button
        android:id="@+id/terzaRisposta"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_button_quiz_game"
        android:text="@string/button"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="510dip"
        android:layout_marginHorizontal="80dp"/>

    <TextView
        android:id="@+id/numeroDomandaTV"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:text="@string/domanda_numero"
        android:textColor="#000000" />







</androidx.coordinatorlayout.widget.CoordinatorLayout>